<resources>
    <string name="app_name">IndiaMapApp</string>
    <string name="explore_india">Explore India</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="planner">Planner</string>
    <string name="rang">Rang</string>
    <string name="support">Support</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="documents">Documents</string>
    <string name="album">Album</string>
    <string name="trip_title">Trip Title</string>
    <string name="trip_description">Trip Description</string>
    <string name="done">Done</string>
    <string name="upload_document">Upload Document</string>
    <string name="file_uploaded">file uploaded</string>
    <string name="adhaar_card">Adhaar Card</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallary">From Gallary</string>
    <string name="upload_image">Upload image</string>
    <string name="city">City</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="error_mob_no">Please enter correct mobile number</string>
    <string name="error_otp">Please enter OTP</string>
    <string name="error_title">Please enter title</string>
    <string name="error_desc">Please enter description</string>
    <string name="error_country">Please select country</string>
    <string name="error_city">Please select city</string>
    <string name="dummy_desc">It was amaizing trip It was amaizing trip It was amaizing trip It was amaizing trip It was amaizing trip It was amaizing trip It was amaizing trip It was amaizing tripIt was amaizing tripIt was amaizing trip</string>
    <string name="dummy_start_dates">07 Feb 2023</string>
    <string name="dummy_end_dates">06 Feb 2023</string>
    <string name="dummy_title">Trip to Europe</string>
    <string name="to">to</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete this item?</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="user">User</string>
    <string name="account">Account</string>
    <string name="reviews">Reviews</string>
    <string name="favorites">Favorites</string>
    <string name="languages">Languages</string>
    <string name="events">Events</string>
    <string name="festivals">Festivals</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shopping">Shopping</string>
    <string name="promotions">Promotions</string>
    <string name="food">Food</string>
    <string name="experiences">Experiences</string>
    <string name="places">Places</string>
    <string name="market_place">Market Place</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="lease">Lease</string>
    <string name="monthly">Monthly</string>
    <string name="enter_no_of_months">Enter no of months</string>
    <string name="description">Description</string>
    <string name="properties_amenities">Properties/amenities</string>
    <string name="villa">Villa</string>
    <string name="appartment">Appartment</string>
    <string name="flat">Flat</string>
    <string name="house">House</string>
    <string name="basement">Basement</string>
    <string name="farmhouse">Farmhouse</string>
    <string name="add_photos">Add Photos</string>
    <string name="favorite">Favorite</string>


    //sita's work
    <string name="image">Image</string>
    <string name="properties">Properties</string>
    <string name="buy">Buy</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="dollar">$</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="view_previous_orders">View Previous Orders</string>
    <string name="status">Status</string>

</resources>