<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".marketplace.main.view.ClsAddItemSaleActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <RadioGroup
                android:id="@+id/rg_sale_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/spn_type">

                <RadioButton
                    android:id="@+id/rb_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale"
                    android:textSize="@dimen/content_font" />

                <RadioButton
                    android:id="@+id/rb_rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/rent"
                    android:textSize="@dimen/content_font" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/title"
                app:layout_constraintTop_toBottomOf="@id/rg_sale_type">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/content_font" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/price"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="@dimen/content_font" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_lease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lease"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_price" />

            <CheckBox
                android:id="@+id/cb_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/monthly"
                app:layout_constraintStart_toEndOf="@+id/cb_lease"
                app:layout_constraintTop_toTopOf="@+id/cb_lease" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_months"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/enter_no_of_months"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/cb_lease">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_months"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="@dimen/content_font" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@id/til_months">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/content_font" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/properties_amenities"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/heading_font"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/til_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_properties" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/add_photos"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/heading_font"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_properties" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vector_plus"
                android:tint="@color/colorPrimary"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/tv_add_photo"
                app:layout_constraintTop_toTopOf="@id/tv_add_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_add_photo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:background="@drawable/rect_curved_primary_holo"
        android:text="@string/submit"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>