<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="horizontal"
    android:paddingTop="@dimen/_20sdp"
    android:paddingBottom="@dimen/_20sdp">

    <LinearLayout
        android:id="@+id/ll_camera"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_video"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/from_camera"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/baseline_camera" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/text_content"
            android:textSize="@dimen/content_font" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_video"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_document"
        app:layout_constraintStart_toEndOf="@id/ll_camera">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/from_camera"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_videocam" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@color/text_content"
            android:textSize="@dimen/content_font" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_document"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_gallery"
        app:layout_constraintStart_toEndOf="@id/ll_video">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/from_camera"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_vector_document" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/documents"
            android:textColor="@color/text_content"
            android:textSize="@dimen/content_font" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_gallery"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_document">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/from_camera"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/baseline_photo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/text_content"
            android:textSize="@dimen/content_font" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>