<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/cd_main"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_4sdp"
    app:cardElevation="@dimen/_4sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adhaar_card"
            android:textSize="@dimen/content_font"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/meta_font"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/heading_font"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/text_heading"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>